framework/src/native/zcsi/rte_eth_ctrl.h

/**
 * Tunneled type.
 */
enum rte_eth_tunnel_type {
	RTE_TUNNEL_TYPE_NONE = 0,
	RTE_TUNNEL_TYPE_VXLAN,
	RTE_TUNNEL_TYPE_GENEVE,
	RTE_TUNNEL_TYPE_TEREDO,
	RTE_TUNNEL_TYPE_NVGRE,
	RTE_TUNNEL_TYPE_IP_IN_GRE,
	RTE_L2_TUNNEL_TYPE_E_TAG,
	RTE_TUNNEL_TYPE_MAX,
};
/**
 * A structure used to define the input set configuration for
 * flow director and hash filters
 */
struct rte_eth_input_set_conf {
	uint16_t flow_type;
	uint16_t inset_size;
	enum rte_eth_input_set_field field[RTE_ETH_INSET_SIZE_MAX];
	enum rte_filter_input_set_op op;
};
/**
 * Hash filter information types.
 * - RTE_ETH_HASH_FILTER_SYM_HASH_ENA_PER_PORT is for getting/setting the
 *   information/configuration of 'symmetric hash enable' per port.
 * - RTE_ETH_HASH_FILTER_GLOBAL_CONFIG is for getting/setting the global
 *   configurations of hash filters. Those global configurations are valid
 *   for all ports of the same NIC.
 * - RTE_ETH_HASH_FILTER_INPUT_SET_SELECT is for setting the global
 *   hash input set fields
 */
enum rte_eth_hash_filter_info_type {
	RTE_ETH_HASH_FILTER_INFO_TYPE_UNKNOWN = 0,
	/** Symmetric hash enable per port */
	RTE_ETH_HASH_FILTER_SYM_HASH_ENA_PER_PORT,
	/** Configure globally for hash filter */
	RTE_ETH_HASH_FILTER_GLOBAL_CONFIG,
	/** Global Hash filter input set configuration */
	RTE_ETH_HASH_FILTER_INPUT_SET_SELECT,
	RTE_ETH_HASH_FILTER_INFO_TYPE_MAX,
};
/**
 * A structure used to set or get global hash function configurations which
 * include symmetric hash enable per flow type and hash function type.
 * Each bit in sym_hash_enable_mask[] indicates if the symmetric hash of the
 * corresponding flow type is enabled or not.
 * Each bit in valid_bit_mask[] indicates if the corresponding bit in
 * sym_hash_enable_mask[] is valid or not. For the configurations gotten, it
 * also means if the flow type is supported by hardware or not.
 */
struct rte_eth_hash_global_conf {
	enum rte_eth_hash_function hash_func; /**< Hash function type */
	/** Bit mask for symmetric hash enable per flow type */
	uint64_t sym_hash_enable_mask[RTE_SYM_HASH_MASK_ARRAY_SIZE];
	/** Bit mask indicates if the corresponding bit is valid */
	uint64_t valid_bit_mask[RTE_SYM_HASH_MASK_ARRAY_SIZE];
};
/**
 * A structure used to set or get hash filter information, to support filter
 * type of 'RTE_ETH_FILTER_HASH' and its operations.
 */
struct rte_eth_hash_filter_info {
	enum rte_eth_hash_filter_info_type info_type; /**< Information type */
	/** Details of hash filter information */
	union {
		/** For RTE_ETH_HASH_FILTER_SYM_HASH_ENA_PER_PORT */
		uint8_t enable;
		/** Global configurations of hash filter */
		struct rte_eth_hash_global_conf global_conf;
		/** Global configurations of hash filter input set */
		struct rte_eth_input_set_conf input_set_conf;
	} info;
};
/**
 * l2 tunnel configuration.
 */
struct rte_eth_l2_tunnel_conf {
	enum rte_eth_tunnel_type l2_tunnel_type;
	uint16_t ether_type; /* ether type in l2 header */
	uint32_t tunnel_id; /* port tag id for e-tag */
	uint16_t vf_id; /* VF id for tag insertion */
	uint32_t pool; /* destination pool for tag based forwarding */
};